@@ -1,4 +1,8 @@
-2003-05-15  Peter Bienstman  <Peter.Bienstman@ugent.be>
+2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>
+
+	* mueller.cpp: Improve debug code.
+
+2003-07-15  Peter Bienstman  <Peter.Bienstman@ugent.be>
 
 	* mueller.cpp: Better check for degenerate modes.
 
